@@ -505,12 +505,16 @@ public class PostingsHighlighter {
       // if the segment has changed, we must initialize new enums.
       if (leaf != lastLeaf) {
         Terms t = r.terms(field);
-        if (!t.hasOffsets()) {
-          // no offsets available
-          throw new IllegalArgumentException("field '" + field + "' was indexed without offsets, cannot highlight");
+        if (t != null) {
+          if (!t.hasOffsets()) {
+            // no offsets available
+            throw new IllegalArgumentException("field '" + field + "' was indexed without offsets, cannot highlight");
+          }
+          termsEnum = t.iterator();
+          postings = new PostingsEnum[terms.length];
+        } else {
+          termsEnum = null;
         }
-        termsEnum = t.iterator();
-        postings = new PostingsEnum[terms.length];
       }
       if (termsEnum == null) {
         continue; // no terms for this field, nothing to do
